--- a/hs-erp-web/web/pageflow/student/index.html
+++ b/hs-erp-web/web/pageflow/student/index.html
@@ -8,11 +8,11 @@
 
 @import "../../js/dojo1.1.1/dijit/themes/dijit.css";
 
-@import "../../js/dojo1.1.1/dijit/themes/simple/simple.css";
+@import "../../js/dojo1.1.1/dijit/themes/tundra/tundra.css";
 
 @import "../../css/sms.css";
 
-@import "../../js/dojo1.1.1/dojox/grid/_grid/simpleGrid.css";
+@import "../../js/dojo1.1.1/dojox/grid/_grid/tundraGrid.css";
 #grid { 
 			border: 1px solid #333;
 			height: 200px;
@@ -108,7 +108,7 @@
         );
 	</script>
 	</head>
-	<body class="simple">
+	<body class="tundra">
 		<div id="mainTabContainer" dojoType="dijit.layout.TabContainer"
 			style="width: 100%; height: 100%">
 			<div dojoType="dijit.layout.ContentPane" title="查看学生" id="queryTab">
