--- a/trunk/hs-erp-web/web/index.html
+++ b/trunk/hs-erp-web/web/index.html
@@ -8,11 +8,11 @@
 
 @import "js/dojo1.1.1/dijit/themes/dijit.css";
 
-@import "js/dojo1.1.1/dijit/themes/simple/simple.css";
+@import "js/dojo1.1.1/dijit/themes/tundra/tundra.css";
 
 @import "css/sms.css";
 
-@import "js/dojo1.1.1/dojox/grid/_grid/simpleGrid.css";
+@import "js/dojo1.1.1/dojox/grid/_grid/tundraGrid.css";
 
 html,body {
 	height: 100%;
@@ -50,7 +50,7 @@ html,body {
 		}
 	</script>
 	</head>
-	<body class="simple">
+	<body class="tundra">
 		<div id="main" dojoType="dijit.layout.BorderContainer">
 
 			<div id="header" dojoType="dijit.layout.ContentPane" region="top"
